syntax = "proto3";

package vocabularypb;

import "vocabularypb/message.proto";

service VocabularyService {
  rpc SearchVocabulary(SearchVocabularyRequest) returns (SearchVocabularyResponse) {}
}

// SEARCH VOCABULARY

message SearchVocabularyRequest {
  string performerId = 1;
  string term = 2;
}

message SearchVocabularyResponse {
  bool found = 1;
  repeated string suggestions = 2;
  Vocabulary vocabulary = 3;
}
